<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bg"
    >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginVertical="@dimen/head_margin_vertical"
            android:text="@string/decision"
            android:textColor="@color/turquoise_900"
            android:textSize="@dimen/head_text_size"
        />

        <TextView
            android:id="@+id/discriminant_find"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/turquoise_900"
            android:gravity="center"
            android:textSize="@dimen/detail_disc_text"
            android:text="@string/discriminant_find"
        />

        <TextView
            android:id="@+id/disc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_margin_top"
            android:gravity="center"
            android:textColor="@color/turquoise_900"
            android:textSize="@dimen/detail_disc_text"
            android:text="@string/d"
        />

        <TextView
            android:id="@+id/sqrt_find"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_margin_top"
            android:gravity="center"
            android:textColor="@color/turquoise_900"
            android:textSize="@dimen/detail_disc_text"
            android:text="@string/sqrt_find"
        />

        <TextView
            android:id="@+id/sqrt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_margin_top"
            android:gravity="center"
            android:textColor="@color/turquoise_900"
            android:textSize="@dimen/detail_disc_text"
            android:text="@string/sqrt"
        />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="@dimen/btn_back_width"
            android:layout_height="@dimen/btn_back_height"
            android:layout_marginTop="@dimen/btn_back_margin_top"
            android:backgroundTint="@color/turquoise_400"
            android:text="@string/btn_back"
            android:layout_gravity="center"
            android:textSize="@dimen/result_text_size"
        />
    </LinearLayout>
</FrameLayout>